--- a/css/styles.css
+++ b/css/styles.css
@@ -270,10 +270,14 @@ img {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-
+/* Mobil screen */
 .first-container {
-
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 72px;
 }
+/* Tablet screen */
 @media screen and (min-width: 768px) {
     .first-container {
        
@@ -294,17 +298,33 @@ img {
 .first-li {
     width: calc((100% - 48px) / 3);
 }
+/* Mobil screen */
 .background-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--color-logo-wit);
-    width: 264px;
-    height: 112px;
-    border-radius: 4px;
-    margin-bottom: 8px;
-    padding: 24px 100px;
+    display: none;
 }
+
+/* Tablet screen */
+@media screen and (min-width: 768px) {
+    .background-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--color-logo-wit);
+        width: 264px;
+        height: 112px;
+        border-radius: 4px;
+        margin-bottom: 8px;
+        padding: 24px 100px;
+    }
+}
+
+/* Desctop screen */
+@media screen and (min-width: 1200px) {
+    .background-icon {
+       
+    }
+
+
 .first-h { 
     margin-top: 8px;
 }
