--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body {
     max-width: 428px;
     
     padding: 0 16px 0 16px;
+     outline: 2px solid red;
 }
 
 /* Tablet screen */
@@ -46,6 +47,7 @@ body {
 @media screen and (min-width: 1158px) {
     .container {
         max-width: 1158px;
+      
     }
 }
 
@@ -270,64 +272,67 @@ img {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-/* Mobil screen */
-.first-container:not(:last-child) {
-    padding-bottom: 72px;
+
+@media only screen and (max-width: 767px) {
+    .first-li:not(:last-child) {
+     margin-bottom: 72px;
+ }
 }
+
 /* Tablet screen */
 @media screen and (min-width: 768px) {
     .first-container {
-       
+        display: flex;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+        align-content: flex-start;
     }
 }
 
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
     .first-container {
-        display: flex;
-        gap: 24px;
+        gap: 24px 24px;
     }
 }
-.header-h2 {
+/* .header-h2 {
     margin-bottom: 72px;
-}
-@media screen and (min-width: 768px) {
+}*/
+@media only screen and (min-width: 768px) {
     .first-li {
-            width: calc((100% - 48px) / 3);
+       flex-basis: calc((100% - 24px) / 2);
         }
 }
-
-
+@media only screen and (min-width: 1158px) {
+    .first-li {
+     flex-basis: calc((100% - 8px) / 4);
+     }
+}
 /* Mobil screen */
 .background-icon {
     display: none;
 }
-
-/* Tablet screen */
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 1158px) {
     .background-icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: var(--color-logo-wit);
-        width: 264px;
-        height: 112px;
-        border-radius: 4px;
-        margin-bottom: 8px;
-        padding: 24px 100px;
-    }
+    display: flex;
 }
-
+}
 /* Desctop screen */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1158px) {
     .background-icon {
-       
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-logo-wit);
+    width: 264px;
+    height: 112px;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    padding: 24px 100px;
     }
 
 }
-.first-h { 
-    margin-top: 8px;
-}
+
 .header-h {
     font-weight: 500;
     font-size: 20px;
@@ -342,7 +347,12 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-
+ 
+@media only screen and (min-width: 1158px) {
+    .par-text {
+        width: 264px;
+    }
+}
 /**
   |============================
   | Styles second section
