--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@
     --modal-color: #fcfcfc;
     --modal-label: #8E8F99;
     --color-placeholder :#2e2f4266;
+    --border-menu: #E7E9FC;
+    --mobil-adres: #434455;
 
 }
 /**
@@ -33,7 +35,7 @@ body {
     max-width: 428px;
     
     padding: 0 16px 0 16px;
-     outline: 2px solid red;
+    /*outline: 2px solid red;*/
 }
 
 /* Tablet screen */
@@ -91,13 +93,21 @@ img {
 
 .header-container {
     display: flex;
-    flex-direction: row;
+   
     justify-content: space-between;
+    align-items: center;
 }
-
-.hav-container {
+@media only screen and (min-width: 768px) {
+    .hav-container {
     display: flex;
     align-items: center;
+    } 
+} 
+@media screen and (min-width: 1158px) {
+    .hav-container {
+            display: flex;
+            align-items: center;
+        }
 }
 
 .logo {
@@ -152,15 +162,19 @@ img {
     color: var(--color-nav);
 }
 @media only screen and (max-width: 767px) {
-    .header-address {
-    display: none;
-} 
 .nav {
     display: none;
 }
-
+.contact{
+    display: none;
 }
 
+}
+@media only screen and (min-width: 767px) {
+    .menu-toggle {
+        display: none;
+    }
+}
 .header-address {
     font-size: 16px;
     line-height: 1.5;
@@ -169,15 +183,37 @@ img {
     font-style: normal;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .header-address-container {
     display: flex;
     align-items: center;
     gap: 40px;
 }
+@media only screen and (min-width: 768px) {
+    .header-address-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    font-style: normal;
+    margin-left: auto;
+    flex-direction: column;
+    }
+} 
+@media only screen and (min-width: 1158px) {
+    .header-address-container {
+        flex-direction: row;
+    }
+}
 .contact{
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media only screen and (min-width: 768px) {
+    .contact {
+    letter-spacing: 0.02em;
+    color: var(--mobil-adres);
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+} 
 .active {
     display: block;
     position: relative;
@@ -274,11 +310,17 @@ img {
     max-width: 496px;
     margin-bottom: 46px;
 }
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
     .hero-title {  
         font-size: 56px;
-        margin-left: 331px;          
+        margin-left: 136px;          
         }
+}
+@media screen and (min-width: 1158px) {
+    .hero-title {
+        font-size: 56px;
+        margin-left: 331px;
+    }
 }
 .hero-button {
     font-family: var(--primary-font);
@@ -319,72 +361,174 @@ img {
 | Mobile screen
 |============================
 */
-.menu-toggle {
-    min-height: 40px;
-    min-width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    margin: 0;
-    padding: 0;
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
-    border-radius: 50%;
-    outline: none;
-}
-
-@media (min-width: 768px) {
-    .menu-toggle {
-        display: none;
-    }
-}
-.menu-toggle-icons {
-    stroke: rgb(0, 0, 128);
-
-}
-.menu-toggle:hover,
-.menu-toggle:focus {
-    background-color: rgba(0, 0, 0, 0.1);
-}
 
 .menu-container {
+    display: flex;
+    flex-direction: column;
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
-    padding: 32px;
-    background-color: #3f51b5;
+    height: 796px;
+    background-color: var(--primary-color);
     z-index: 999;
-
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
+    padding: 80px 35px 40px 40px;
 }
 
 .menu-container.is-open {
     transform: translateX(0);
 }
 
-.menu-container .menu-toggle {
+
+.modal-button-mob {
     position: absolute;
-    top: 16px;
-    right: 16px;
-    color: #fff;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    background-color: #e7e9fc;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+                border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-button-mob:hover{
+    background-color: var(--logo-client-hover);
+    border: none;
+}
+.modal-button-mob:focus {
+    background-color: var(--logo-client-hover);
+    border: none;
+}
+.modal-icon-mob {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-icon-mob:hover{
+    fill: var(--primary-color);
+}
+.modal-icon-mob:focus {
+    fill: var(--primary-color);
+}
+@media (min-width: 768px) {
+    .modal-button-mob {
+        display: none;
+    }
+}
+.close-mobile {
+    border: 1px px solid var(--color-placeholder);
+    padding: 0;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    border-color: var(--border-menu);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+}
+.menu-toggle-icons {
+    stroke: rgb(0, 0, 128);
+
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+}
 .mobile-menu {
     padding: 0;
-    margin: 0;
     list-style: none;
+    margin-bottom: 264px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 40px;
 }
 
+.icon-close {
+    position: absolute;
+    fill: var(--color-placeholder);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .mobile-menu .link {
     display: block;
-    padding: 10px;
-    color: #fff;
+    color: var(--primary-header);
     text-decoration: none;
+}
+.nav-mob{
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+
+}
+.nav-mob.blue {
+    color: var(--logo-client-hover);
+}
+.mobile-address-container {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 40px;
+    margin-bottom: 48px;
+}
+.contact-mob-tel {
+    color: var(--logo-client-hover);
+    font-family: Roboto;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+     text-transform: capitalize;
+}
+.contact-mob-mail{
+        color: var(--mobil-adres);
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.4px;
+}
+@media only screen and (min-width: 428px) {
+    .social-media-mobil.social-mobile {
+    display: flex;
+    gap: 56px;
+}
+}
+.social-media-mobil {
+    display: flex;
+    gap: 56px
+}
+.media-li-mob {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.media-a-mob {
+    width: 40px;
+    height: 40px;
+    background-color: var(--logo-client-hover);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.media-icon-mob{
+    fill: var(--color-logo-wit);
+    stroke: var(--color-logo-witn);
 }
 /**
   |============================
@@ -443,6 +587,7 @@ img {
 /* Desctop screen */
 @media screen and (min-width: 1158px) {
     .first-container {
+        flex-wrap: nowrap;
         gap: 24px 24px;
     }
 }
@@ -555,11 +700,19 @@ img {
     padding-bottom: 96px;
     background-color: var(--color-logo-wit);
 }
+
 @media only screen and (min-width: 1158px) {
     .second-li {
         padding-top: 120px;
         padding-bottom: 120px;
     }
+}
+@media only screen and (min-width: 768px) and (max-width: 1157px){
+    .con-div {
+    max-width: 584px;
+    margin-left: 108px;
+
+} 
 }
 .second-third-title{
     margin-bottom: 72px;  
@@ -572,6 +725,8 @@ img {
     align-items: center;
     justify-content: center;
     gap: 72px;
+    width: 264px;
+    margin: 0 82px;  
     }
 }
 @media only screen and (min-width: 768px) {
@@ -581,6 +736,12 @@ img {
     gap: 72px 24px;
 } 
 }
+@media only screen and (min-width: 1158px) {
+    .third-container {
+        flex-wrap: nowrap;
+    }
+}
+
 .employee-card {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -659,29 +820,48 @@ img {
 }
 @media only screen and (min-width: 428px) {
     .client-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 72px 16px;
+    }
+}
+@media only screen and (min-width: 428px){
+    .client-list {
     display: flex;
     flex-wrap: wrap;
     gap: 72px 16px;
-    }
 }
-.client-list {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
 }
-@media only screen and (min-width: 428px) {
-    .client-items {
+
+@media only screen and (min-width: 768px) {
+    .client-list {
+        gap: 72px 24px;
+        }
+}
+
+@media only screen and (min-width: 1158px) {
+    .client-list {
+        justify-content: center;
+         gap: 24px;
+        align-items: center;
+        flex-wrap: nowrap;
+        }
+}
+.client-items {
     flex-basis: calc((100% - 16px) / 2);
-    }
 }
+
 @media only screen and (min-width: 768px) {
     .client-items {
     flex-basis: calc((100% - 48px) / 3);
     }
 }
-.client-items {
+@media only screen and (min-width: 1158px){
+    .client-items {
     flex-basis: calc((100% - 120px) / 6);
+    }
 }
+
 
 .clients-link {
     display: flex;
@@ -723,10 +903,17 @@ img {
     background-color: var(--primary-header);
 
 }
+@media only screen and (min-width: 768px) {
+    .footer {
+           padding-left: 108px;
+    
+        }
+}
 @media only screen and (min-width: 1158px) {
     .footer {
         padding-top: 100px;
         padding-bottom: 100px;
+        padding-left: 134px;
     }
 }
 @media only screen and (min-width: 428px) {
@@ -734,14 +921,25 @@ img {
     text-align: center;
     }
 }
+@media only screen and (min-width: 768px) {
+    .container-footer {
+    display: flex; 
+    flex-wrap: wrap; 
+     text-align: left; 
+     max-width: 584px;
+    align-items: baseline;
+    gap: 24px;
+    }
+}
 @media only screen and (min-width: 1158px) {
     .container-footer {
             display: flex;
             align-items: baseline;
-            margin-left: 156px;
+            max-width: 1132px;
             width: 1158px;
             margin: 0 auto;
             padding: 0 15px 0 15px;
+            flex-wrap: nowrap;
         }
 }
 
@@ -757,7 +955,7 @@ img {
 } 
 @media only screen and (min-width: 1158px) {
     .footer-flex {
-            margin-right: 120px;
+            margin-right: 80px;
         }
 }
 
@@ -812,7 +1010,7 @@ img {
 .social-media-footer:focus {
     background-color: var(--media-hover);
 }
-@media only screen and (-width: 428px) {
+@media only screen and (max-width: 428px) {
     .footer-subscribe-form {
     text-align: center;
     } 
@@ -827,7 +1025,7 @@ img {
     letter-spacing: 0.02em;
 }
 
-@media only screen and (min-width: 1158px) {
+@media only screen and (min-width: 768px) {
     .subscribe-form {
             display: flex;
             gap: 24px;
