--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ body {
     max-width: 428px;
     
     padding: 0 16px 0 16px;
+    margin: 0 auto;
     /*outline: 2px solid red;*/
 }
 
@@ -42,6 +43,7 @@ body {
 @media screen and (min-width: 768px){
     .container {
         max-width: 768px;
+        margin: 0 auto;
     }
 }
 
@@ -49,6 +51,7 @@ body {
 @media screen and (min-width: 1158px) {
     .container {
         max-width: 1158px;
+        margin: 0 auto;
       
     }
 }
@@ -87,7 +90,7 @@ img {
 */
 .header {
     padding-top: 24px;
-    padding-bottom: 24px;
+    padding-bottom: 5px;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
@@ -118,7 +121,7 @@ img {
     text-transform: uppercase;
     letter-spacing: 0.03em;
     color: var(--color-nav);
-    margin-right: 76px;
+   
     text-align: center;
 }
 @media only screen and (max-width: 767px) {
@@ -151,8 +154,7 @@ img {
 
 }
 .nav {
-    position: relative;
-    color: var(--color-nav);
+    position: relative;align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav:hover,
@@ -200,7 +202,10 @@ img {
 } 
 @media only screen and (min-width: 1158px) {
     .header-address-container {
+        display: flex;
         flex-direction: row;
+        align-items: center;
+        gap: 40px;
     }
 }
 .contact{
@@ -215,9 +220,14 @@ img {
 }
 } 
 .active {
-    display: block;
     position: relative;
     color: #404BBF;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .active::after {
@@ -369,12 +379,14 @@ img {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 796px;
+    height: 100vh;
     background-color: var(--primary-color);
     z-index: 999;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
     padding: 80px 35px 40px 40px;
+    justify-content: space-between;
+
 }
 
 .menu-container.is-open {
@@ -435,9 +447,13 @@ img {
     justify-content: center;
     position: absolute;
 }
+.menu-toggle {
+    border: none;
+    background-color: white;
+}
 .menu-toggle-icons {
     stroke: rgb(0, 0, 128);
-
+border: none;
 }
 
 .menu-toggle:hover,
@@ -447,7 +463,6 @@ img {
 .mobile-menu {
     padding: 0;
     list-style: none;
-    margin-bottom: 264px;
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -629,24 +644,45 @@ img {
 
 }
 
-.header-h {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--primary-header);
-    text-align: center;
+@media only screen and (min-width: 428px) {
+    .header-h {
+        font-family: Roboto;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 1.2;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+        color: var(--primary-header);
+        text-align: center;   
+        }
 }
-
+@media only screen and (min-width: 768px) {
+    .header-h {
+        text-align: left;
+    }
+}
+@media only screen and (min-width: 1158px) {
+    .header-h {
+        font-size: 20px;
+        font-weight: 500;
+        letter-spacing: 0.4px;
+        text-align: center;
+        }
+}
 .par-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    font-family: Roboto;
+    margin-top: 8px;
+    text-align: center;
 }
  
 @media only screen and (min-width: 1158px) {
     .par-text {
         width: 264px;
+        text-align: left;
     }
 }
 /**
@@ -661,8 +697,7 @@ img {
 }
 @media only screen and (min-width: 1158px) {
     .second-sec {
-            padding-top: 120px;
-            padding-bottom: 120px;
+            padding-bottom: 72px;
         }
 }
 @media only screen and (min-width: 1158px) {
@@ -701,12 +736,6 @@ img {
     background-color: var(--color-logo-wit);
 }
 
-@media only screen and (min-width: 1158px) {
-    .second-li {
-        padding-top: 120px;
-        padding-bottom: 120px;
-    }
-}
 @media only screen and (min-width: 768px) and (max-width: 1157px){
     .con-div {
     max-width: 584px;
@@ -913,7 +942,6 @@ img {
     .footer {
         padding-top: 100px;
         padding-bottom: 100px;
-        padding-left: 134px;
     }
 }
 @media only screen and (min-width: 428px) {
@@ -933,13 +961,14 @@ img {
 }
 @media only screen and (min-width: 1158px) {
     .container-footer {
-            display: flex;
-            align-items: baseline;
-            max-width: 1132px;
-            width: 1158px;
-            margin: 0 auto;
-            padding: 0 15px 0 15px;
-            flex-wrap: nowrap;
+        display: flex;
+        align-items: baseline;
+        margin-left: 156px;
+        width: 1158px;
+        margin: 0 auto;
+        padding: 0 15px 0 15px;
+        flex-wrap: nowrap;
+        justify-content: center;
         }
 }
 
@@ -955,10 +984,14 @@ img {
 } 
 @media only screen and (min-width: 1158px) {
     .footer-flex {
-            margin-right: 80px;
+            margin-right: 120px;
         }
 }
-
+@media only screen and (min-width: 1158px) {
+    .footer-flex-par {
+        margin-right: 80px;
+    }
+}
 .logo-wit {
     color: var(--color-logo-wit);
 }
@@ -969,7 +1002,6 @@ img {
 @media only screen and (min-width: 428px) {
 .footer-paragraph {
     margin: 0 auto;
-    text-align: left;
 }
 } 
 
@@ -981,10 +1013,19 @@ img {
     margin-bottom: 16px;
     font-weight: 500;
     color: var(--primary-color);
+
+}
+@media only screen and (min-width: 428px) {
+    .social {
+        margin-bottom: 80px;
+    }
 }
 .social {
     display: flex;
     gap: 16px;
+    align-items: center;
+    justify-content: center;
+
 }
 .social-media-f {
     width: 40px;
@@ -1015,6 +1056,7 @@ img {
     text-align: center;
     } 
 }
+
 .par-form {
     color: var(--primary-color);
     font-family: Roboto;
