--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,12 @@ body {
 /* Mobil screen */
 .container{
     min-width: 320px;
-    max-width: 428px;
+    max-width: 420px;
     
     padding: 0 16px 0 16px;
     margin: 0 auto;
     /*outline: 2px solid red;*/
 }
-
 /* Tablet screen */
 @media screen and (min-width: 768px){
     .container {
@@ -55,7 +54,12 @@ body {
       
     }
 }
-
+@media screen and (min-width: 768px) and (max-width: 1158px) {
+    .cont{
+       width: 584px; 
+    }
+    
+}
 /* Reset */
 h1,
 h2,
@@ -90,10 +94,22 @@ img {
 */
 .header {
     padding-top: 24px;
-    padding-bottom: 5px;
+    padding-bottom: 20px;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+@media only screen and (min-width: 768px) {
+    .header {
+        padding-top: 24px;
+        padding-bottom: 5px;
+    }
+}
 
+@media only screen and (min-width: 1158px) {
+    .header {
+        padding-top: 24px;
+        padding-bottom: 20px;
+    }
+}
 .header-container {
     display: flex;
    
@@ -151,6 +167,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--primary-header);
+    margin-left: 76px;
 
 }
 .nav {
@@ -219,14 +236,19 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 } 
+@media only screen and (min-width: 768px) {
+    .active {
+        padding-bottom: 10px;
+    }
+}
 .active {
     position: relative;
     color: #404BBF;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.02em;
     padding-bottom: 24px;
+    letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -643,20 +665,16 @@ border: none;
     }
 
 }
-
-@media only screen and (min-width: 428px) {
     .header-h {
-        font-family: Roboto;
+    font-family: Roboto;
         font-size: 36px;
         font-style: normal;
         font-weight: 700;
-        line-height: 1.2;
+        line-height: 40px;
         letter-spacing: 0.72px;
         text-transform: capitalize;
-        color: var(--primary-header);
-        text-align: center;   
+        text-align: center;
         }
-}
 @media only screen and (min-width: 768px) {
     .header-h {
         text-align: left;
@@ -676,13 +694,18 @@ border: none;
     letter-spacing: 0.02em;
     font-family: Roboto;
     margin-top: 8px;
-    text-align: center;
+    text-align: left;
 }
- 
+ @media only screen and (min-width: 768px) {
+     .par-text {
+        
+         text-align: left;
+     }
+ }
 @media only screen and (min-width: 1158px) {
     .par-text {
         width: 264px;
-        text-align: left;
+       
     }
 }
 /**
@@ -702,10 +725,25 @@ border: none;
 }
 @media only screen and (min-width: 1158px) {
     .second-third-title {
+        font-family: Roboto;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+        color: var(--primary-header);
+        margin-bottom: 72px;
+    }
+}
+@media only screen and (min-width: 1158px) {
+    .second-third-title-a {
+            font-family: Roboto;
             font-size: 36px;
-            line-height: 1.11;
-            letter-spacing: 0.02em;
-            text-align: center;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 40px;             
+            letter-spacing: 0.72px;
             text-transform: capitalize;
             color: var(--primary-header);
             margin-bottom: 72px;
@@ -744,25 +782,31 @@ border: none;
 } 
 }
 .second-third-title{
-    margin-bottom: 72px;  
     text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    margin-bottom: 72px;
 }
-@media only screen and (max-width: 767px) {
     .third-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 72px;
-    width: 264px;
-    margin: 0 82px;  
+    align-content: center;
     }
-}
+
 @media only screen and (min-width: 768px) {
     .third-container {
     display: flex;
     flex-wrap: wrap;
     gap: 72px 24px;
+    flex-direction: row;
 } 
 }
 @media only screen and (min-width: 1158px) {
@@ -794,6 +838,16 @@ border: none;
     .color-sec {
         flex-basis: calc((100% - 24px) / 4);
         }
+}
+
+.header-h-t{
+    text-align: center;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
 }
 .social-media {
     display: flex;
@@ -854,19 +908,12 @@ border: none;
         gap: 72px 16px;
     }
 }
-@media only screen and (min-width: 428px){
-    .client-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 72px 16px;
-}
-}
 
-@media only screen and (min-width: 768px) {
+/**@media only screen and (min-width: 768px) {
     .client-list {
         gap: 72px 24px;
         }
-}
+}*/
 
 @media only screen and (min-width: 1158px) {
     .client-list {
@@ -896,8 +943,8 @@ border: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 168px;
     height: 88px;
+    padding: 16px 32px;
     border: 1px solid var(--logo-client);
     border-radius: 4px;
     color: var(--logo-client);
@@ -932,12 +979,12 @@ border: none;
     background-color: var(--primary-header);
 
 }
-@media only screen and (min-width: 768px) {
+/**@media only screen and (min-width: 768px) {
     .footer {
            padding-left: 108px;
     
         }
-}
+}*/
 @media only screen and (min-width: 1158px) {
     .footer {
         padding-top: 100px;
@@ -946,52 +993,63 @@ border: none;
 }
 @media only screen and (min-width: 428px) {
     .container-footer {
+    display: flex;
     text-align: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    margin: 0 auto;
+    padding: 0 15px 0 15px;
     }
 }
 @media only screen and (min-width: 768px) {
     .container-footer {
-    display: flex; 
+    display: flex;
     flex-wrap: wrap; 
-     text-align: left; 
-     max-width: 584px;
+    text-align: left; 
+    justify-content: flex-start;
     align-items: baseline;
     gap: 24px;
+
+    padding: 0 15px 0 15px;
+    flex-direction: row;
     }
 }
 @media only screen and (min-width: 1158px) {
     .container-footer {
         display: flex;
         align-items: baseline;
+        flex-direction: row;
         margin-left: 156px;
         width: 1158px;
         margin: 0 auto;
         padding: 0 15px 0 15px;
-        flex-wrap: nowrap;
-        justify-content: center;
-        }
-}
-
-
-@media only screen and (min-width: 428px) {
-    .footer-flex {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 72px;
-    margin-bottom: 72px;
-    }
-} 
-@media only screen and (min-width: 1158px) {
-    .footer-flex {
-            margin-right: 120px;
+        text-align: left;
         }
 }
 @media only screen and (min-width: 1158px) {
     .footer-flex-par {
-        margin-right: 80px;
+       margin-right: 80px;
     }
 }
+
+@media only screen and (min-width: 426px) {
+    .footer-flex {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
+    }
+} 
+@media only screen and (min-width: 1158px) {
+    .footer-flex {
+        display: flex;
+        margin-right: 120px;
+        align-items: flex-start;
+        }
+}
+
 .logo-wit {
     color: var(--color-logo-wit);
 }
@@ -999,23 +1057,28 @@ border: none;
     display: inline-block;
     margin-bottom: 16px;
 }
-@media only screen and (min-width: 428px) {
+@media only screen and (min-width: 426px) {
 .footer-paragraph {
     margin: 0 auto;
+    text-align: left;
 }
 } 
 
 .footer-paragraph {
     font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    max-width: 264px;
-    margin-bottom: 16px;
-    font-weight: 500;
-    color: var(--primary-color);
-
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        max-width: 264px;
+        margin-bottom: 16px;
+        font-weight: 500;
+        color: var(--primary-color);
+    
 }
-@media only screen and (min-width: 428px) {
+.footer-pad{
+    margin-top: 72px;
+    text-align: center;
+}
+@media only screen and (min-width: 426px) {
     .social {
         margin-bottom: 80px;
     }
@@ -1051,12 +1114,16 @@ border: none;
 .social-media-footer:focus {
     background-color: var(--media-hover);
 }
-@media only screen and (max-width: 428px) {
+@media only screen and (min-width: 428px) {
     .footer-subscribe-form {
     text-align: center;
     } 
 }
-
+@media only screen and (min-width: 768px) {
+    .footer-subscribe-form {
+    text-align: left;
+    } 
+}
 .par-form {
     color: var(--primary-color);
     font-family: Roboto;
@@ -1071,10 +1138,11 @@ border: none;
     .subscribe-form {
             display: flex;
             gap: 24px;
+            justify-content: center;
         }
 }
 .subscribe-form-input {
-    width: 264px;
+    width: 100%;
     height: 40px;
     border: 1px solid var(--primary-color);
     background-color: transparent;
@@ -1087,7 +1155,18 @@ border: none;
     color: var(--primary-color);
     margin-bottom: 16px;
 }
+@media only screen and (min-width: 768px) {
+    .subscribe-form-input {
+        width: 264px;
+        
+    }
+}
+@media only screen and (min-width: 768px) {
+    .subscribe-form-input {
+        width: 200px;
 
+    }
+}
 .placeholder {
     color: var(--primary-color);
 }
@@ -1109,7 +1188,7 @@ border: none;
     border: none;
     border-radius: 4px;
 }
-@media only screen and (min-width: 428px) {
+@media only screen and (max-width: 426px) {
     .subscribe-button {
         margin: 0 auto;
     }
